--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frappe-gantt",
-  "version": "0.6.1",
+  "name": "@schminkel/frappe-gantt",
+  "version": "0.6.1.1",
   "description": "A simple, modern, interactive gantt library for the web",
   "main": "src/index.js",
   "scripts": {
