--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/frappe/gantt.git"
+    "url": "https://github.com/schminkel/frappe-gantt.git"
   },
   "files": [
     "src",
@@ -29,7 +29,7 @@
     "interactive gantt",
     "project management"
   ],
-  "author": "Faris Ansari",
+  "author": "Thorsten Schminkel",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/frappe/gantt/issues"
